# only-code

./: .gitignore  OnlyCode.spec  README.md  TUI_Plan.md  USER-GUIDE.md  build.py  pyproject.toml  requirements.txt  run.sh  run_onlycode.py  setup.sh
dev_docs/: CHANGELOG-Phase0.md  CHANGELOG-Phase1.md  CHANGELOG-Phase2.md  CHANGELOG-Phase3.md  CHANGELOG-Phase4.md  CHANGELOG-Phase5.md
onlycode/: main.py
onlycode/app/: application.py
onlycode/app/screens/: file_dialogs.py  main_screen.py
onlycode/app/widgets/: __init__.py  file_browser.py  status_bar.py  tab_bar.py  terminal_panel.py
onlycode/editor/: buffer_manager.py  editor_widget.py
onlycode/shared/config/: __init__.py  loader.py  session.py  settings.py
onlycode/shared/plugins/: __init__.py  actions.py  loader.py  models.py
onlycode/shared/plugins/scripting/: __init__.py  editor_api.py  lua_engine.py  python_engine.py
scripts/: build-linux.sh  build-macos.sh  build-windows.bat
