[project]
name = "onlycode"
version = "0.1.0"
description = "A terminal-based code editor using Textual"
authors = [
    {name = "Chuck", email = "chuck@example.com"},
]
dependencies = [
    "textual>=0.40.0",
    "watchfiles>=0.20.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["onlycode*"]
